# beerify

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
assets/: index-30IXfb2u.js  index-B36UxCxN.js  index-By4XdtrR.css  index-CBStv6Vw.css  index-CYlMfVIh.js  index-Cu9eED_O.js  index-DPVVIyX0.js  index-DRcmjpP5.js  index-Dn7495jo.js  index-G6XqW6u6.js  index-tPGJ6h3m.js
backend/: .env  .env.example  render.yaml
backend/app/: auth.py  config.py  main.py
backend/app/routers/: __init__.py  catalog.py  invites.py
backend/tests/: test_security_smoke.py
docs/: index.html
docs/assets/: index-8b63PB8N.js  index-BFZ2Xslf.js  index-BZvYqMCk.js  index-C5vYg3Ny.js  index-CI1qETiA.js  index-CSKoULxy.js  index-CWOJL8s2.css  index-Ce1W3HjG.js  index-DDhTe2yc.css  index-hHBzyVpH.css  index-nOToh50j.css
frontend/: .env  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/beer/: BeerEntryForm.tsx  PhotoDropzone.tsx
frontend/src/components/feed/: FeedCard.tsx
frontend/src/components/friends/: FriendsPanel.tsx
frontend/src/components/stats/: StatsPanel.tsx
frontend/src/hooks/: useAuth.ts  useFeed.ts  useFriends.ts  useStats.ts
frontend/src/lib/: api.ts  storage.ts  supabase.ts
frontend/src/pages/: FeedPage.tsx  InvitePage.tsx  LoginPage.tsx  ProfilePage.tsx  StatsPage.tsx
frontend/src/store/: auth.ts
frontend/src/types/: database.ts
scripts/: dev-backend.sh  dev-frontend.sh  seed-catalog.sh  test-backend.sh
supabase/: schema.sql
(+5 files in other folders)
