[project]
name = "beer-project"
version = "0.1.0"
description = ""
authors = [
    {name = "lfresco",email = "a-lfresco@deloitte.it"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "supabase (>=2.31.0,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]
